fix: Path alignment on OSQuery ATC details

--- a/server/static_src/scss/styles.scss
+++ b/server/static_src/scss/styles.scss
@@ -39,6 +39,9 @@ $bootstrap-icons-font-dir: "~bootstrap-icons/font/fonts";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootstrap-icons/font/bootstrap-icons";
 
+pre {
+    margin-bottom: 0px;
+}
 
 .errorlist {
     color: $zred;
